Prevents weird stretching of images at small sizes

--- a/themes/fial_theme/sass/_main-content.sass
+++ b/themes/fial_theme/sass/_main-content.sass
@@ -170,6 +170,7 @@
         display: inline-block
         img
           max-height: 200px
+          width: auto
         &.white-border
           background-color: white
         &.grey-border
